ANTLR/tinyParser.java
// Generated from tiny.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class tinyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, ELSE=2, INT=3, FLOAT=4, BOOL=5, VOID=6, WHILE=7, PROGRAM=8, THEN=9, 
		FI=10, TTRUE=11, TFALSE=12, AND=13, OR=14, NOT=15, WRITE=16, READ=17, 
		DO=18, UNTIL=19, PLUS=20, MINUS=21, MULTIPLY=22, DIVIDE=23, LESS_OR_EQUAL=24, 
		LESS_THAN=25, GREATER_OR_EQUAL=26, GREATER_THAN=27, EQUALS=28, NOT_EQUALS=29, 
		ASSIGNMENT=30, EOL=31, COMMA=32, LEFT_PARANTHESIS=33, RIGHT_PARANTHESIS=34, 
		LEFT_BRACKET=35, RIGHT_BRACKET=36, LEFT_SQR_BRACKET=37, RIGHT_SQR_BRACKET=38, 
		ID=39, NUM=40, WS=41;
	public static final int
		RULE_program = 0, RULE_declarationlist = 1, RULE_declaration = 2, RULE_vardeclaration = 3, 
		RULE_typespecifier = 4, RULE_statementlist = 5, RULE_statement = 6, RULE_assign = 7, 
		RULE_selectionstmt = 8, RULE_iterationstmt = 9, RULE_repetitionstmt = 10, 
		RULE_evaluacion = 11, RULE_block = 12, RULE_expreval = 13, RULE_sentread = 14, 
		RULE_sentwrite = 15, RULE_bexpresion = 16, RULE_bterm = 17, RULE_notfactor = 18, 
		RULE_bfactor = 19, RULE_expression = 20, RULE_var = 21, RULE_simpleexpression = 22, 
		RULE_relop = 23, RULE_additiveexpression = 24, RULE_addop = 25, RULE_term = 26, 
		RULE_mulop = 27, RULE_factor = 28, RULE_call = 29, RULE_args = 30, RULE_arglist = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declarationlist", "declaration", "vardeclaration", "typespecifier", 
			"statementlist", "statement", "assign", "selectionstmt", "iterationstmt", 
			"repetitionstmt", "evaluacion", "block", "expreval", "sentread", "sentwrite", 
			"bexpresion", "bterm", "notfactor", "bfactor", "expression", "var", "simpleexpression", 
			"relop", "additiveexpression", "addop", "term", "mulop", "factor", "call", 
			"args", "arglist"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'else'", "'int'", "'float'", "'bool'", "'void'", "'while'", 
			"'program'", "'then'", "'fi'", "'true'", "'false'", "'and'", "'or'", 
			"'not'", "'write'", "'read'", "'do'", "'until'", "'+'", "'-'", "'*'", 
			"'/'", "'<='", "'<'", "'>='", "'>'", "'=='", "'!='", "'='", "';'", "','", 
			"'{'", "'}'", "'('", "')'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "ELSE", "INT", "FLOAT", "BOOL", "VOID", "WHILE", "PROGRAM", 
			"THEN", "FI", "TTRUE", "TFALSE", "AND", "OR", "NOT", "WRITE", "READ", 
			"DO", "UNTIL", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "LESS_OR_EQUAL", 
			"LESS_THAN", "GREATER_OR_EQUAL", "GREATER_THAN", "EQUALS", "NOT_EQUALS", 
			"ASSIGNMENT", "EOL", "COMMA", "LEFT_PARANTHESIS", "RIGHT_PARANTHESIS", 
			"LEFT_BRACKET", "RIGHT_BRACKET", "LEFT_SQR_BRACKET", "RIGHT_SQR_BRACKET", 
			"ID", "NUM", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "tiny.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public tinyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(tinyParser.PROGRAM, 0); }
		public TerminalNode LEFT_PARANTHESIS() { return getToken(tinyParser.LEFT_PARANTHESIS, 0); }
		public DeclarationlistContext declarationlist() {
			return getRuleContext(DeclarationlistContext.class,0);
		}
		public StatementlistContext statementlist() {
			return getRuleContext(StatementlistContext.class,0);
		}
		public TerminalNode RIGHT_PARANTHESIS() { return getToken(tinyParser.RIGHT_PARANTHESIS, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(PROGRAM);
			setState(65);
			match(LEFT_PARANTHESIS);
			setState(66);
			declarationlist(0);
			setState(67);
			statementlist(0);
			setState(68);
			match(RIGHT_PARANTHESIS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationlistContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public DeclarationlistContext declarationlist() {
			return getRuleContext(DeclarationlistContext.class,0);
		}
		public DeclarationlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).enterDeclarationlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).exitDeclarationlist(this);
		}
	}

	public final DeclarationlistContext declarationlist() throws RecognitionException {
		return declarationlist(0);
	}

	private DeclarationlistContext declarationlist(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		DeclarationlistContext _localctx = new DeclarationlistContext(_ctx, _parentState);
		DeclarationlistContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_declarationlist, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(71);
				declaration();
				}
				break;
			case 2:
				{
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(79);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new DeclarationlistContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_declarationlist);
					setState(75);
					if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
					setState(76);
					declaration();
					}
					} 
				}
				setState(81);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public TypespecifierContext typespecifier() {
			return getRuleContext(TypespecifierContext.class,0);
		}
		public VardeclarationContext vardeclaration() {
			return getRuleContext(VardeclarationContext.class,0);
		}
		public TerminalNode EOL() { return getToken(tinyParser.EOL, 0); }
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			typespecifier();
			setState(83);
			vardeclaration(0);
			setState(84);
			match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclarationContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(tinyParser.ID, 0); }
		public VardeclarationContext vardeclaration() {
			return getRuleContext(VardeclarationContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(tinyParser.COMMA, 0); }
		public VardeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).enterVardeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).exitVardeclaration(this);
		}
	}

	public final VardeclarationContext vardeclaration() throws RecognitionException {
		return vardeclaration(0);
	}

	private VardeclarationContext vardeclaration(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		VardeclarationContext _localctx = new VardeclarationContext(_ctx, _parentState);
		VardeclarationContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_vardeclaration, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(87);
			match(ID);
			}
			_ctx.stop = _input.LT(-1);
			setState(94);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new VardeclarationContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_vardeclaration);
					setState(89);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(90);
					match(COMMA);
					setState(91);
					match(ID);
					}
					} 
				}
				setState(96);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class TypespecifierContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(tinyParser.INT, 0); }
		public TerminalNode BOOL() { return getToken(tinyParser.BOOL, 0); }
		public TerminalNode FLOAT() { return getToken(tinyParser.FLOAT, 0); }
		public TypespecifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typespecifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).enterTypespecifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).exitTypespecifier(this);
		}
	}

	public final TypespecifierContext typespecifier() throws RecognitionException {
		TypespecifierContext _localctx = new TypespecifierContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_typespecifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << BOOL))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementlistContext extends ParserRuleContext {
		public StatementlistContext statementlist() {
			return getRuleContext(StatementlistContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public StatementlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).enterStatementlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).exitStatementlist(this);
		}
	}

	public final StatementlistContext statementlist() throws RecognitionException {
		return statementlist(0);
	}

	private StatementlistContext statementlist(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		StatementlistContext _localctx = new StatementlistContext(_ctx, _parentState);
		StatementlistContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_statementlist, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			}
			_ctx.stop = _input.LT(-1);
			setState(104);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new StatementlistContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_statementlist);
					setState(100);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(101);
					statement();
					}
					} 
				}
				setState(106);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public SelectionstmtContext selectionstmt() {
			return getRuleContext(SelectionstmtContext.class,0);
		}
		public IterationstmtContext iterationstmt() {
			return getRuleContext(IterationstmtContext.class,0);
		}
		public RepetitionstmtContext repetitionstmt() {
			return getRuleContext(RepetitionstmtContext.class,0);
		}
		public SentreadContext sentread() {
			return getRuleContext(SentreadContext.class,0);
		}
		public SentwriteContext sentwrite() {
			return getRuleContext(SentwriteContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statement);
		try {
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				selectionstmt();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				iterationstmt();
				}
				break;
			case DO:
				enterOuterAlt(_localctx, 3);
				{
				setState(109);
				repetitionstmt();
				}
				break;
			case READ:
				enterOuterAlt(_localctx, 4);
				{
				setState(110);
				sentread();
				}
				break;
			case WRITE:
				enterOuterAlt(_localctx, 5);
				{
				setState(111);
				sentwrite();
				}
				break;
			case LEFT_PARANTHESIS:
				enterOuterAlt(_localctx, 6);
				{
				setState(112);
				block();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 7);
				{
				setState(113);
				assign();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(tinyParser.ID, 0); }
		public TerminalNode ASSIGNMENT() { return getToken(tinyParser.ASSIGNMENT, 0); }
		public BexpresionContext bexpresion() {
			return getRuleContext(BexpresionContext.class,0);
		}
		public TerminalNode EOL() { return getToken(tinyParser.EOL, 0); }
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).exitAssign(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(ID);
			setState(117);
			match(ASSIGNMENT);
			setState(118);
			bexpresion(0);
			setState(119);
			match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectionstmtContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(tinyParser.IF, 0); }
		public EvaluacionContext evaluacion() {
			return getRuleContext(EvaluacionContext.class,0);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode FI() { return getToken(tinyParser.FI, 0); }
		public TerminalNode ELSE() { return getToken(tinyParser.ELSE, 0); }
		public SelectionstmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectionstmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).enterSelectionstmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).exitSelectionstmt(this);
		}
	}

	public final SelectionstmtContext selectionstmt() throws RecognitionException {
		SelectionstmtContext _localctx = new SelectionstmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_selectionstmt);
		try {
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				match(IF);
				setState(122);
				evaluacion();
				setState(123);
				block();
				setState(124);
				match(FI);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				match(IF);
				setState(127);
				evaluacion();
				setState(128);
				block();
				setState(129);
				match(ELSE);
				setState(130);
				block();
				setState(131);
				match(FI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IterationstmtContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(tinyParser.WHILE, 0); }
		public EvaluacionContext evaluacion() {
			return getRuleContext(EvaluacionContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public IterationstmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iterationstmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).enterIterationstmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).exitIterationstmt(this);
		}
	}

	public final IterationstmtContext iterationstmt() throws RecognitionException {
		IterationstmtContext _localctx = new IterationstmtContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_iterationstmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(WHILE);
			setState(136);
			evaluacion();
			setState(137);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepetitionstmtContext extends ParserRuleContext {
		public TerminalNode DO() { return getToken(tinyParser.DO, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode UNTIL() { return getToken(tinyParser.UNTIL, 0); }
		public EvaluacionContext evaluacion() {
			return getRuleContext(EvaluacionContext.class,0);
		}
		public TerminalNode EOL() { return getToken(tinyParser.EOL, 0); }
		public RepetitionstmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repetitionstmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).enterRepetitionstmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).exitRepetitionstmt(this);
		}
	}

	public final RepetitionstmtContext repetitionstmt() throws RecognitionException {
		RepetitionstmtContext _localctx = new RepetitionstmtContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_repetitionstmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(DO);
			setState(140);
			block();
			setState(141);
			match(UNTIL);
			setState(142);
			evaluacion();
			setState(143);
			match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EvaluacionContext extends ParserRuleContext {
		public TerminalNode LEFT_BRACKET() { return getToken(tinyParser.LEFT_BRACKET, 0); }
		public BexpresionContext bexpresion() {
			return getRuleContext(BexpresionContext.class,0);
		}
		public TerminalNode RIGHT_BRACKET() { return getToken(tinyParser.RIGHT_BRACKET, 0); }
		public EvaluacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_evaluacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).enterEvaluacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).exitEvaluacion(this);
		}
	}

	public final EvaluacionContext evaluacion() throws RecognitionException {
		EvaluacionContext _localctx = new EvaluacionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_evaluacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(LEFT_BRACKET);
			setState(146);
			bexpresion(0);
			setState(147);
			match(RIGHT_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LEFT_PARANTHESIS() { return getToken(tinyParser.LEFT_PARANTHESIS, 0); }
		public StatementlistContext statementlist() {
			return getRuleContext(StatementlistContext.class,0);
		}
		public TerminalNode RIGHT_PARANTHESIS() { return getToken(tinyParser.RIGHT_PARANTHESIS, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tinyListener ) ((tinyListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(LEFT_PARANTHESIS);
			setState(150);
			statementlist(0);
			setState(151);
			match(RIGHT_PARANTHESIS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
